# api_homework

./: resource.py
poetry/: pyproject.toml
tests/: __init__.py  test_delete_user.py  test_get_list_users.py  test_post_create_user.py  test_put_user.py
