[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["romanshkin <rt@infomedia.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
jsonschema = "^4.23.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
